--- a/style.css
+++ b/style.css
@@ -13,8 +13,14 @@ body {
   padding: 90px 0 0 0;
 }
 
-h2, 
-h1,
+h1{
+  font-family: 'Cinzel', serif;
+}
+
+h3,
+h2,
+h4,
+h5,
 .grupo-2 {
   font-family: 'Roboto', sans-serif;
 }
@@ -33,7 +39,7 @@ p{
 }
 
 .header {
- background-color: #7fffd41e;
+ background-color: #1b2220af;
   height: 100px;
   position: fixed;
   width: 100%;
@@ -84,7 +90,7 @@ p{
 }
 
 .nav-menu-link:hover{
-  background-color: #3d8666a6;
+  background-color: #01443182;
   transition: 0.5s;
 }
 
@@ -111,7 +117,8 @@ p{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: rgba(255, 255, 255, 0.693);
+  color: rgba(255, 255, 255, 0.904);
+  letter-spacing: 5px;
 }
 
 .catalogo1 {
@@ -121,8 +128,8 @@ p{
 }
 
 .caja img{
-  height: 160px;
-  width: 160px;
+  height:165px;
+  width: 165px;
   border-radius: 15px;
   box-shadow: 5px 5px rgba(51, 51, 51, 0.122);
 }
@@ -148,11 +155,24 @@ p{
 .PedirProducto{
   font-family: 'Roboto', sans-serif;
   display: block;
-  width: 160px;
+  width: 165px;
   background-color: #00bd819b;
   align-items: center;
   border-radius: 15px;
   box-shadow: 3px 3px rgba(108, 108, 108, 0.276);
+}
+
+.PedirProducto:hover{
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+  transform: translateY(-5%);
+}
+
+.Precio{
+  color: rgb(56, 185, 31);
+}
+
+.MasCaro{
+  color: rgb(200, 20, 20);
 }
 
 .Plataformas{
@@ -175,7 +195,7 @@ p{
 
 .finalFooter {
   width: 100%;
-  background-color: #0f0f0fed;
+  background-color: #0f0f0ff8;
   color: #ffffff;
 }
 
